fix scrollbar on header/footer

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ header {
   width: 100% !important;
   z-index:100;
 
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -43,7 +42,6 @@ footer {
   text-align: center;
   padding: .5em 0;
 
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: hidden;
   white-space: nowrap;
 }
